# PromptWise

./: .coverage  .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  PromptWise_Master_PRD.docx.docx  README.md  README_ADMIN.md  api.py  backend.Dockerfile  check_db.py  cli.py  conftest.py  coverage.xml  create_admin.py  database.py  debug_imports.py  docker-compose.yml  execute_app.bat  feedback_log.json  fix_init_files.py  frontend.Dockerfile  list_models.py  main.py  model.joblib  models.py  promptwise.db  pyproject.toml  pytest.ini  rag_output.txt  requirements.txt  run_backend.py  run_coverage.py  run_tests.py  sessions.json  test_access_control.py  test_hash.py  test_pdf_export.py  test_precommit.py  (+7 more)
Admin_Dashboard/: AdminDashboard.tsx  README_AdminDashboard.md  admin_export.py  admin_routes.py  admin_user_roles.json  audit_event_schema.json  audit_logger.py  audit_routes.py  audit_utils.py  auth_routes.py  auth_utils.py
Chat_Session_Management/: README_Module.md  chat_flow_notes.md  chat_schema.json  payload_examples.json  todo.md
Deployment_Scripts_Templates/: .env.example  README_Module.md  deployment_notes.md  docker-compose.yml  infra_pipeline_flow.drawio  init_migrations.sh  service_config_template.json
Edge_Case_Handling/: README_Module.md  alerts_and_throttles.md  edge_scenarios.md
Export_Integration_System/: README_Module.md  export_logic_notes.md  export_payload_examples.json  export_todo.md  pdf_generator.py  webhook_structure.json
Feedback_Rating_System/: README_Module.md  feedback_storage_notes.md  rating_schema.json  (+1 more)
(+133 files in other folders)
