[project]
name = "promptwise"
version = "1.0.0"
description = "Modular prompt routing and session management system"
authors = [{ name = "Vivek Potnuru" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "pytest",
    "pytest-cov",
    "pre-commit",
    "black",
    "flake8",
    "mypy"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"